<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/sign_in" />

    <ImageView
        android:id="@+id/imagelogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/logotext"
        android:contentDescription="@string/img_Logo" />
        <TextView
            android:textAlignment="center"
            android:id="@+id/tvSilahkan"
            android:layout_below="@id/imagelogo"
            android:layout_marginBottom="50dp"
            android:text="@string/tv_Silahkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <EditText
        android:inputType="text"
        android:autofillHints="@string/hint_username"
        android:id="@+id/etUsername"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSilahkan"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:drawableStart="@drawable/ic_username"
        android:hint="@string/hint_username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:autofillHints="@string/hint_password"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/btnLogin"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_sign_in" />
    <TextView
        android:id="@+id/tvCreateAccount"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_below="@id/btnLogin"
        android:text="@string/tv_CreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </RelativeLayout>